# data-flywheel

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  ml-ci.yml
configs/grafana/alerting/: alerts.yml  contact-points.yml  notification-policies.yml
configs/grafana/dashboards/: mlops-overview.json
configs/label-studio/: labeling_config.xml
configs/nginx/: canary.conf.template  nginx.conf  upstream.conf
configs/prometheus/: prometheus.yml
data/raw/: .gitignore  cifar10-noisy.dvc
docker/minio/: Dockerfile  entrypoint.sh
docker/mlflow/: Dockerfile
docker/mlflow-init/: Dockerfile
docker/monitoring/: Dockerfile
docker/nginx/: Dockerfile
docker/orchestration/: Dockerfile
docker/prefect/: Dockerfile
docker/serving/: Dockerfile
docker/training/: Dockerfile
docs/: architecture.md  improvements.md  layer-1-infrastructure.md  layer-2-data-pipeline.md  layer-3-training.md  layer-4-orchestration.md  layer-5-serving.md  layer-6-monitoring.md  roadmap-platform-gaps.md  setup-guide.md
docs/research/: cleanlab.md  cleanvision.md  dvc.md  evidently.md  mlflow.md  prefect.md
docs/specs/: 2026-03-29-active-learning-first-mlops-design.md
examples/image_classification/: prepare_demo_data.py  prepare_noisy_data.py
scripts/: create-multiple-databases.sh  ensure_databases.sh  run_active_learning_demo.py  run_evidently_demo.py  seed_data.sh  seed_label_studio_project.py  seed_registry_model.py  setup_dvc.sh  update_nginx_config.sh  verify.sh
src/active_learning/: __init__.py  config.py  protocols.py
src/active_learning/accumulator/: __init__.py  auto_accumulator.py
src/active_learning/labeling/: __init__.py  bridge.py  config.py  webhook.py
src/active_learning/routing/: __init__.py  confidence_router.py
src/active_learning/uncertainty/: __init__.py  softmax_entropy.py
src/common/: device.py
src/core/: protocols.py
src/core/active_learning/: config.py
src/core/monitoring/: canary_metrics.py  metrics.py  orchestration_counter.py
src/core/orchestration/: config_deployment.py  serve.py
src/core/serving/: reload_sync.py
src/data/preprocessing/: __init__.py  transforms.py
src/data/validation/: __init__.py  image_validator.py  label_validator.py
src/data/versioning/: __init__.py  config.py  dvc_manager.py  models.py
src/monitoring/: canary_metrics.py  metrics.py  prediction_logger.py
src/monitoring/evidently/: config.py  drift_detector.py
src/orchestration/: config.py  serve.py
src/orchestration/flows/: __init__.py  active_learning_flow.py  continuous_training_flow.py  continuous_training_serve.py  data_accumulation_flow.py  deployment_flow.py  monitoring_flow.py  training_pipeline.py
src/orchestration/tasks/: __init__.py  active_learning_tasks.py  canary_gate.py  continuous_training_tasks.py  data_tasks.py  deployment_tasks.py  training_tasks.py
src/plugins/: loader.py
src/plugins/cv/: __init__.py  sample_selector.py  train.py  trainer.py  uncertainty.py  validator.py
src/serving/api/: admin.py  app.py  config.py  dependencies.py  routes.py  schemas.py
src/serving/nginx/: nginx.conf
src/training/: train.py
src/training/configs/: __init__.py  train_config.py
src/training/models/: __init__.py  classifier.py
src/training/trainers/: __init__.py  classification_trainer.py
tests/e2e/: conftest.py  test_active_learning_e2e.py  test_closed_loop_e2e.py  test_continuous_training_e2e.py  test_data_accumulation_e2e.py  test_infrastructure_e2e.py  test_monitoring_pipeline_e2e.py  test_quality_gates_e2e.py  test_serving_e2e.py
tests/e2e/browser/: conftest.py  (+11 more)
tests/integration/: conftest.py  test_label_studio_integration.py  test_monitoring_services_health.py  test_serving_metrics.py  test_serving_prediction_logging.py
tests/unit/: test_active_learning_flow.py  test_auto_accumulator.py  test_canary_gate.py  test_canary_metrics.py  test_classifier_creation.py  test_confidence_router.py  test_continuous_training_flow.py  test_continuous_training_tasks.py  test_data_accumulation_flow.py  test_data_tasks_dvc_integration.py  test_data_tasks_validation.py  test_data_transforms.py  test_deployment_config.py  test_deployment_flow.py  test_deployment_tasks.py  test_dvc_manager_versioning.py  test_grafana_alerts_yaml.py  test_image_validator_report.py  test_label_validator_issues.py  test_labeling_bridge.py  test_metrics_setup.py  test_monitoring_drift.py  test_monitoring_flow.py  test_monitoring_logger.py  test_monitoring_metrics.py  test_orchestration_config_env_override.py  test_orchestration_counter.py  test_orchestration_serve_all.py  test_pipeline_health_gate.py  test_plugin_loader.py  test_protocols.py  test_runtime_gate.py  test_seed_label_studio_project.py  test_serving_api.py  test_serving_config.py  test_serving_dependencies.py  test_serving_schemas.py  test_train_config_defaults.py  test_trainer_device_resolution.py  test_transforms_shapes.py  (+1 more)
(+36 files in other folders)
