[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "General-purpose CV MLOps pipeline template for on-premises deployment"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # Data Version Control
    "dvc[s3]>=3.55",
    # Data Validation
    "cleanlab>=2.7",
    "cleanvision>=0.3.6",
    # ML Framework
    "torch>=2.6",
    "torchvision>=0.21",
    # Experiment Tracking
    "mlflow>=3.10",
    # Orchestration
    "prefect>=3.0",
    # Configuration
    "pydantic-settings>=2.7",
    # Storage
    "boto3>=1.35",
    # Serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "python-multipart>=0.0.9",
    # Utilities
    "Pillow>=11.0",
    "numpy>=2.0",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations (enforce type hints)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires Docker services)",
    "e2e: End-to-end pipeline tests",
]
